<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WarmOrange</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notificaties</string>
    <string name="title_wizard">Wizard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder">Placeholder string</string>
    <string name="next">Volgende</string>
    <string name="compare">Vergelijk</string>
    <string name="qr_scanner">QR-Scanner</string>
    <string name="demo_boeken">Demo boeken</string>
    <string name="account">Account</string>
    <string name="vorige">Vorige</string>
    <string name="email">Email</string>
    <string name="email_label" tools:ignore="Typos">Voer hier uw email adres in.</string>
    <string name="name_label">Voer hier uw naam in.</string>
    <string name="login">Log in</string>
    <string name="name">Naam</string>
    <string name="password">Wachtwoord</string>
    <string name="password_label">Voer hier uw wachtwoord in.</string>
    <string name="no_account_yet">Nog geen account?</string>
    <string name="make_account">Maak een account aan</string>
    <string name="add_to_wishlist">Voeg toe aan wishlist</string>
    <string name="passwordRepeat">Herhaal wachtwoord</string>
    <string name="customer_card">Klantenkaart</string>
    <string name="bought_products">Gekochte producten</string>
    <string name="logout">Uitloggen</string>
    <string name="customer_card_sub">Laat deze code scannen aan de kassa!</string>
    <string name="customer_nr">Klantennummer:</string>
    <string name="leave_review">Review achterlaten</string>
    <string name="place_review">Plaats review</string>
    <string name="review_score">Score van je review?</string>
    <string name="wizard_title">Uitslag van de wizard</string>
    <string name="wizard_text1">De wizard berekende dat de</string>
    <string name="wizard_text2">Bij je past! Wil je naar de pagina van dit product navigeren?</string>
    <string name="wizard_confirm">Akkoord</string>
    <string name="wizard_deny">Probeer opnieuw</string>
    <string name="scan_qr">Scan!</string>
    <string name="scan_qr_dialogtitle">Product Gescanned</string>
    <string name="scan_qr_dialogmessage">U heeft de code van <b><i>%1$s</i></b> gescanned. Wilt u naar de pagina van dit product gaan?</string>
    <string name="scan_qr_dialogoption_cancel">Terug naar scanner</string>
    <string name="scan_qr_dialogoption_continue">Ga naar productpagina</string>
    <string name="home_suggestions">Suggesties</string>
    <string name="home_compare">Vergelijk</string>
    <string name="nameless">Naamloos</string>
    <string name="leaveReview">Laat een review achter!</string>
    <string name="productImage">Productafbeelding</string>
    <string name="warrantyRemaining">Resterende garantie:</string>
    <string name="boughtWhen">Gekocht op:</string>
    <string name="reviewThanks">Bedankt om een review achter te laten!</string>
    <string name="warrantyExpired">Garantie verlopen</string>
    <string name="myWishlist">Mijn wishlist</string>
    <string name="deleteFromWishlist">Verwijder product uit wishlist</string>
    <string name="emptyWishlist">Lege wishlist</string>
    <string name="emptyWishlistLabel">Nog niets te vinden hier!</string>
    <string name="inWishlist">In wishlist</string>
    <string name="comparison_empty">Lege vergelijking</string>
    <string name="comparison_empty_label">Geen producten om te vergelijken!</string>
    <string name="addSecondItem">Voeg een tweede item toe om te vergelijken</string>
    <string name="whatYouLookingFor">Waar ben je naar op zoek?</string>
    <string name="reviewBox">Laat een text achter bij je review (optioneel)</string>
    <string name="undo_string">undo</string>
    <string name="added_to_wishlist">werd toegevoegd aan je wishlist</string>
    <string name="removed_from_wishlist">werd uit je wishlist verwijderd</string>
    <string name="in_comparison">In vergelijking</string>
    <string name="log_in_to_add_to_wishlist">Log in om producten aan je wishlist toe te voegen.</string>
    <plurals name="produts_list_category_title">
        <item quantity="one">%2$s - %1$d resultaat</item>
        <item quantity="other">%2$s - %1$d resultaten</item>
    </plurals>
    <plurals name="produts_list_title">
        <item quantity="one">%1$d resultaat</item>
        <item quantity="other">%1$d resultaten</item>
    </plurals>
    <string name="filter_category">Filter %1$s</string>
    <string name="removedFromComparison"> is verwijderd uit de vergelijking!</string>
    <string name="comparisonFull">De vergelijking bevat al twee producten, verwijder één product alvorens een ander toe te voegen</string>
    <string name="revertChanges">Ongedaan maken</string>
    <string name="bookNewDemo">Boek een nieuwe demo</string>
    <string name="bookDemo">Boek demo</string>
    <string name="bookDemoWizard">Boek een demo voor een keuzewizard</string>
    <string name="bookDemoProduct">Boek een demo over een product</string>
    <string name="bookedDemos">Geboekte demos</string>
    <string name="cancel">Annuleer</string>
    <string name="cancelled">Geannuleerd</string>
    <string name="move">Verplaats</string>
    <string name="cancelDemo">Annuleer demo</string>
    <string name="cancelDemoProductMessage">Weet u zeker dat u de demo voor het product %1$s wilt annuleren?</string>
    <string name="cancelDemoWizardMessage">Weet u zeker dat u de demo voor de wizard %1$s wilt annuleren?</string>
    <string name="yes">ja</string>
    <string name="no">nee</string>
    <string name="bookDemoWizardTitle">Boek een demo over je keuzewizard:</string>
    <string name="bookDemoProductTitle">Boek een demo over dit product:</string>
    <string name="result">Uitslag:</string>
    <string name="wizardOf">wizard van %1$s</string>
    <string name="chooseDateTime">Kies een datum en tijdstip:</string>
    <string name="date">datum:</string>
    <string name="time">tijdstip:</string>
    <string name="book">Boek</string>
    <string name="moveDemo">Verplaats demo</string>
    <string name="wrongCompType">Je bent reeds een product van een ander type aan het vergelijken.</string>
    <string name="videoString">Hier hoort een video met uitleg</string>
    <string name="arString">De AR-functionaliteit laat u toe om producten te tonen in uw eigen woonkamer! Richt uw camera op een plat vlak en laat de applicatie de rest doen</string>
    <string name="arStart">Augmented reality gestart!</string>
    <string name="removeWishlist">Uit wishlist gehaald</string>
    <string name="loginWishlist">Log in om producten aan uw persoonlijke wishlist toe te voegen.</string>
    <string name="available">Beschikbaar in Hasselt</string>
    <string name="notAvailable">Niet beschikbaar in Hasselt</string>
    <string name="wizardLimit">Wizard enkel geimplementeerd voor televisies</string>
    <string name="compareFull">Je bent al twee producten aan het vergelijken!</string>
    <string name="applied_filters">Toegepaste filters:</string>
    <string name="emptyWarranty">Nog niets te vinden hier! Laat je klantenkaart zeker scannen wanneer je iets koopt!</string>
    <string name="loginDemo">Log in om een demo te boeken</string>
    <string name="noWizards">Er zijn geen wizards om demos van te boeken</string>
    <string name="noDemo">Er zijn nog geen geboekte demos</string>
    <string name="no_products">Geen producten</string>
    <string name="no_products_found">Geen producten gevonden.</string>
</resources>
