<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/compareFragment"
        android:icon="@drawable/ic_baseline_compare_arrows_24"
        android:title="@string/compare" />
    <item
        android:id="@+id/qrFragment"
        android:icon="@drawable/ic_baseline_qr_code_scanner_24"
        android:title="@string/qr_scanner" />
    <item
        android:id="@+id/demoFragment"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/demo_boeken" />
    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/account" />


</menu>