<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.warmorange.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.warmorange.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.warmorange.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_wizardFragment"
        android:name="com.example.warmorange.WizardFragment"
        android:label="fragment_wizard"
        tools:layout="@layout/fragment_wizard" />
    <fragment
        android:id="@+id/accountFragment"
        android:name="com.example.warmorange.LoginFragment"
        android:label="fragment_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/compareFragment"
        android:name="com.example.warmorange.CompareFragment"
        android:label="fragment_compare"
        tools:layout="@layout/fragment_compare" />
    <fragment
        android:id="@+id/demoFragment"
        android:name="com.example.warmorange.DemoFragment"
        android:label="fragment_demo"
        tools:layout="@layout/fragment_demo" />
    <fragment
        android:id="@+id/qrFragment"
        android:name="com.example.warmorange.QrFragment"
        android:label="fragment_qr"
        tools:layout="@layout/fragment_qr" >
        <argument
            android:name="ProductType"
            app:argType="string"
            android:defaultValue="Television"/>
        <action
            android:id="@+id/action_qrFragment_to_navigation_wizardFragment"
            app:destination="@id/navigation_wizardFragment" />
    </fragment>
</navigation>